[gd_scene load_steps=6 format=3 uid="uid://duljjpg03kmmi"]

[ext_resource type="Script" path="res://scripts/InventoryItem.gd" id="1_d72dl"]
[ext_resource type="PackedScene" uid="uid://ben23m1njao22" path="res://scenes/PlantDataSprites.tscn" id="1_gnlxc"]
[ext_resource type="Texture2D" uid="uid://cluw70la5tyrj" path="res://assets/box.png" id="2_0k2fj"]
[ext_resource type="Script" path="res://scripts/DraggableControl.gd" id="2_wyy8a"]
[ext_resource type="PackedScene" uid="uid://cq6yx2mr1jebo" path="res://scenes/ElementDisplay.tscn" id="5_idxhu"]

[node name="InventoryItem" type="CenterContainer"]
offset_right = 100.0
offset_bottom = 100.0
script = ExtResource("1_d72dl")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_0k2fj")

[node name="DraggableControl" type="Control" parent="."]
layout_mode = 2
script = ExtResource("2_wyy8a")

[node name="PlantDataSprites" parent="DraggableControl" instance=ExtResource("1_gnlxc")]
layout_mode = 2
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -32.0
offset_top = -32.0
offset_right = 31.0
offset_bottom = 32.0

[node name="ElementDisplay" parent="DraggableControl" instance=ExtResource("5_idxhu")]
layout_mode = 2
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -45.0
offset_top = -142.0
offset_right = 195.0
offset_bottom = -42.0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="DraggableControl/PlantDataSprites" to="." method="_on_plant_data_sprites_mouse_entered"]
[connection signal="mouse_exited" from="DraggableControl/PlantDataSprites" to="." method="_on_plant_data_sprites_mouse_exited"]
